--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">TournamentFinder</string>
+    <string name="app_name">PyTournaments</string>
+
+    <!-- Login Fragment -->
+    <string name="login_fragment_title">PyTournaments</string>
+    <string name="login_fragment_email">Email</string>
+    <string name="login_fragment_password">Senha</string>
+    <string name="login_fragment_logon">Entrar</string>
+    <string name="login_fragment_sign_up">Criar conta</string>
+    <string name="login_fragment_forgot_retype">Confirme sua senha</string>
+    <string name="login_fragment_forgot">Esqueceu a senha?</string>
+    <string name="forgot_fragment_email">Insira seu email</string>
+    <string name="forgot_fragment_send">Enviar email de recuperação</string>
 </resources>
