criação onboarding e inicio autentificação

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,16 @@
     <string name="login_fragment_forgot">Esqueceu a senha?</string>
     <string name="forgot_fragment_email">Insira seu email</string>
     <string name="forgot_fragment_send">Enviar email de recuperação</string>
+    <!-- TODO: Remove or change this placeholder text -->
+
+    <!-- onboarding fragment -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="comecar">Começar</string>
+    <string name="skip">Skip</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
